# kubota

./: .gitignore
backend/: .gitignore  Dockerfile  docker-compose.yml  manage.py  proxy.conf  pyproject.toml  requirements.txt  start.sh  sync_data.sh  test.py
backend/account/: admin.py  helpers.py  models.py  serializers.py  urls.py  views.py
backend/account/migrations/: 0001_initial.py  0002_migrate_account_data.py  0003_alter_user_role.py  0004_migrate_account_more.py
backend/kubota_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/pallet/: admin.py  apps.py  filters.py  models.py  serializers.py  serializers_loading.py  urls.py  views.py  views_loading.py
backend/pallet/migrations/: 0001_initial.py  0002_migrate_data_question_template.py  0003_alter_pallet_pallet_alter_pallet_skewer.py  0003_document_question_type.py  0004_alter_pallet_pallet_alter_pallet_skewer.py  0004_runningnumber_pallet_internal_pallet_no_pallet_nw_gw_and_more.py  0005_document_last_approve_by_document_loading_by_and_more.py  0005_document_pallet_status_documentpallet_and_more.py  0006_document_clerk_approve_name_and_more.py  0006_remove_document_is_approve_document_status.py  0007_pallet_question_type_palletpart_pallet_part_list.py
backend/syncdata/: admin.py  apps.py  master_loading.py  models.py  serializers.py  syncdata.py  urls.py  views.py
backend/syncdata/management/commands/: sync_mssql.py  (+2 more)
backend/syncdata/migrations/: 0001_initial.py  0002_logsyncdata_masterloading.py  0003_mspackingstyle.py
backend/utils/: email.py  models.py  pagination.py  permissions.py
(+89 files in other folders)
